fix: adjust row gaps

--- a/frontend/src/assets/styles/global.scss
+++ b/frontend/src/assets/styles/global.scss
@@ -895,6 +895,20 @@ div#app {
   align-self: stretch;
 }
 
+.grouping-22 {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 2rem;
+}
+
+.grouping-23 {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 0.75rem;
+}
+
 .grouping-divider {
   margin: 0.5rem 0;
 }
